# my-work-related

./: .gitignore
mi300x-pipeline/: INSTALLATION.md  README.md  RUNBOOK.md  analyze.py  capture_device.py  capture_gem5.py  orchestrator.py  pipeline.yaml  predict_sim2real.py  pyproject.toml  refresh_bundle.py  requirements.txt  workloads.py
mi300x-pipeline/agent/: agent.py  knowledge.md
mi300x-pipeline/bench/: gemm.cpp  gemm_fp8.cpp  vectoradd.cpp
mi300x-pipeline/collectors/device/: common.py  l0_silicon.py  l1_firmware.py  l2_kdriver.py  l3_runtime.py  l4_mathlibs.py  l5_framework.py  l6_application.py  l7_task.py
mi300x-pipeline/collectors/gem5/: config_extractor.py  map_layers.py  run_gem5.py  stats_parser.py
mi300x-pipeline/collectors/gem5/configs/: gpu_mi300x.py
mi300x-pipeline/core/: env.py  interface.py  manifest.py  sampling.py
mi300x-pipeline/fixtures/device/: gemm.json  ppo_infer.json
mi300x-pipeline/fixtures/gem5/: config.json  stats.txt  stats_ppo_infer.txt
mi300x-pipeline/normalize/: layer_map.py  normalizer.py  reduce.py  schema.py
mi300x-pipeline/parsers/: ftrace.py  kineto.py  rccl_log.py  rocm_smi_json.py  rocprof_csv.py
mi300x-pipeline/predict/: featurize.py  predictor.py  sinks.py
mi300x-pipeline/publish/: to_dashboard.py
mi300x-pipeline/scripts/: 00_setup_ssh.sh  01_setup_local_wsl.sh  02_setup_cloud_mi300x.sh  03_setup_gem5.sh  05_build_gem5_shared.sh  06_gem5_smoke.sh  07_gem5_apptainer.sh  lib.sh  preflight.sh  probe_env.sh  run_all_demo.sh  setup_persistent_env.sh  test_capture.py  test_rocprofv3.sh
(+82 files in other folders)
